# pythonsnip

./: README.md  pyproject.toml
examples/: example.json  example.py  example_to_snippet.py
src/pythonsnip/: pythonsnip.py
tests/: test_pythonsnip.py
