[tool.poetry]
name = "pythonsnip"
version = "0.1.0"
description = ""
authors = ["azerv1 <asterioszer@gmail.com>"]
readme = "README.md"

packages = [{include = "pythonsnip", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.dev-dependencies]
pytest = "^6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
